<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/house_work_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_work_name_text_field_text" />

        <EditText
            android:id="@+id/house_work_name_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            android:id="@+id/house_work_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_work_time_text_field_text" />

        <EditText
            android:id="@+id/house_work_time_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:id="@+id/house_work_user_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_work_user_text_field_text" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:entries="@array/user_list"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/house_work_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_work_register_button_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>